# SapphireEngine

./: .gitignore  .gitmodules  CMakeLists.txt  GenLin.sh  GenWin.bat  LICENSE.md  premake5.lua
Editor/: CMakeLists.txt  imgui.ini  premake5.lua
Editor/Resources/Models/cube/: cube.mtl
Editor/Resources/Shaders/: Geometry.frag  Geometry.frag.spv  Geometry.vert  Geometry.vert.spv  Lighting.frag  Lighting.frag.spv  Lighting.vert  Lighting.vert.spv  Shader.frag  Shader.frag.spv  Shader.vert  Shader.vert.spv
Editor/Shaders/: gradient.comp  gradient.comp.spv  triangle.frag  triangle.vert  triangle.vert.spv
Editor/Source/: main.cpp
Engine/: CMakeLists.txt  premake5.lua
Engine/Source/Sapphire/Core/: Application.cpp  Application.h  Base.h  EntryPoint.h  ILayer.h  IWindow.cpp  IWindow.h  Image.h  InputCodes.h  Time.h
Engine/Source/Sapphire/Event/: KeyEvent.h  MouseEvent.h  SapphireEvent.h
Engine/Source/Sapphire/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Engine/Source/Sapphire/Import/File/: BinaryFileImporter.cpp  BinaryFileImporter.h
Engine/Source/Sapphire/Import/Image/: ImageImporter.cpp  ImageImporter.h
Engine/Source/Sapphire/Import/Image/Impl/: STBImageImporter.cpp  STBImageImporter.h  WebPImageImporter.cpp  WebPImageImporter.h
Engine/Source/Sapphire/Import/Model/: ModelImporter.cpp  ModelImporter.h
Engine/Source/Sapphire/Import/Model/Impl/: AssimpModelImporter.cpp  AssimpModelImporter.h
Engine/Source/Sapphire/Logging/: Logger.cpp  Logger.h
Engine/Source/Sapphire/Math/: Camera.cpp  Camera.h
Engine/Source/Sapphire/Platform/Linux/: LinuxTime.cpp  LinuxWindow.cpp  LinuxWindow.h
Engine/Source/Sapphire/Platform/VulkanRHI/: VulkanRenderContext.cpp  VulkanRenderContext.h  VulkanRenderExtensions.cpp  VulkanRenderExtensions.h  VulkanRenderPlatform.h  VulkanUtil.cpp  VulkanUtil.h
Engine/Source/Sapphire/Platform/VulkanRHI/Linux/: VulkanRenderPlatformLinux.cpp
Engine/Source/Sapphire/Platform/Windows/: WindowsTime.cpp  WindowsWindow.cpp  WindowsWindow.h
Engine/Source/Sapphire/RHI/: IRenderContext.cpp  IRenderContext.h
Engine/Source/Sapphire/Renderer/: CommandList.cpp  CommandList.h  Descriptor.cpp  Descriptor.h  GPUMemory.cpp  GPUMemory.h  GPUResources.h  Pipeline.cpp  Pipeline.h  RenderContext.cpp  RenderContext.h  RenderExtensions.cpp  RenderExtensions.h  RenderPlatform.h  Renderer.cpp  Renderer.h  Swapchain.cpp  Swapchain.h  VulkanStructs.cpp  VulkanStructs.h  VulkanUtil.cpp  VulkanUtil.h
Engine/Source/Sapphire/Renderer/Linux/: VulkanRenderPlatformLinux.cpp
Engine/Source/Sapphire/Renderer/Windows/: VulkanRenderPlatformWindows.cpp
Engine/Source/Sapphire/Scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
Engine/Source/backend/GLFW/: GLFWWindow.cpp  GLFWWindow.h
Engine/Source/core/: Application.cpp  Application.h  EntryPoint.h  Image.cpp  Image.h  Layer.h  Logger.cpp  Logger.h  Window.cpp  Window.h
Engine/Source/event/: KeyEvent.h  MouseEvent.h  SapphireEvent.h
Engine/Source/imgui/: ImGuiDebugger.cpp  ImGuiDebugger.h  ImGuiDebuggerLogSink.h  ImGuiLayer.cpp  ImGuiLayer.h
Engine/Source/renderer/: Descriptor.cpp  Descriptor.h  Loader.cpp  Loader.h  Pipeline.cpp  Pipeline.h  RenderEngine.cpp  RenderEngine.h  Renderer.cpp  Renderer.h  Types.cpp  Types.h  VkUtil.cpp  VkUtil.h
Engine/src/backend/GLFW/: GLFWWindow.cpp  GLFWWindow.h
Engine/src/core/: Application.cpp  Application.h  EntryPoint.h  Window.cpp  Window.h
